Tidy ip html code

--- a/rollercoaster.html
+++ b/rollercoaster.html
@@ -59,27 +59,49 @@
   <br />
 
   <h1>De flowchart voor dit voorbeeld wordt getoond in onderstaande figuur:</h1><br />
-  <td><img src="images\flowchart.png" alt="Rollercoaster flowchart"></td>
 
-  <h1>Opdracht:</h1>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="images\flowchart.png" width="400" height="480" alt="Alle dingen zijn moeilijk"></td>
+      <td><h1>
+        <br />Opdracht:
+        <br />1. Gebruik zonodig alle vier testontwerptechnieken (volgorde mag je zelf bepalen):
+        <ul>  o ProcesCyclus Test<br>
+              o Beslissingstabel Test <br>
+              o ElementaireVergelijkingen Test <br>
+              o DataCombinatie Test <br>
+              o Syntactische test <br />
+        </ul>
+        <br />
+        2. Specificeer testgevallen per testontwerptechniek<br><br>
+        3. Klaar? Klik <a href="executeRollercoaster.html">hier</a> om je testgevallen uit te voeren.
+       </h1>
+      </td>
 
-  <ol>
-    1. Gebruik zonodig alle vier testontwerptechnieken (volgorde mag je zelf bepalen):<br />
-    o ProcesCyclus Test <br>
-    o Beslissingstabel Test <br>
-    o ElementaireVergelijkingen Test <br>
-    o DataCombinatie Test <br>
-    o Syntactische test <br />
+    </tr>
+  </table>
+<!-- 
+  <table cellspacing="20"></table>
+  <tr>
+  <td><img src="images\flowchart.png" width="400" height="500" style="border:0;" alt="Rollercoaster flowchart"></td>
+</tr>
+</table> -->
 
-  </ol>
+<!-- <td> 
+  1. Gebruik zonodig alle vier testontwerptechnieken (volgorde mag je zelf bepalen):<br />
+  o ProcesCyclus Test <br>
+  o Beslissingstabel Test <br>
+  o ElementaireVergelijkingen Test <br>
+  o DataCombinatie Test <br>
+  o Syntactische test <br />
+></td>
 
-  <ol>
-    2. Specificeer testgevallen per testontwerptechniek
-  </ol>
 
-  <ol>
-    3. Klaar? Klik <a href="executeRollercoaster.html">hier</a> om je testgevallen uit te voeren.
-  </ol>
+
+  2. Specificeer testgevallen per testontwerptechniek
+
+
+  3. Klaar? Klik <a href="executeRollercoaster.html">hier</a> om je testgevallen uit te voeren. -->
 
 </body>
 
