--- a/index.html
+++ b/index.html
@@ -54,24 +54,31 @@
   </div>
 </nav>
 
-<td><img src="images\moeilijk.png" alt="Alle dingen zijn moeilijk"></td>
+<table cellspacing="20">
+  <tr>
+    <td><img src="images\moeilijk.png" alt="Alle dingen zijn moeilijk"></td>
+    <td><h1>
+      <br />Fijn dat je mijn site hebt gevonden!
+      <br /> Tenminste... als je meer wilt weten over testen, dan zit je hier goed.
+      <br />
+      <br />Om te demonstreren hoe verschillende testontwerptechnieken kunnen worden toegepast op dezelfde functionaliteit, gebruiken we diverse voorbeelden en maken we voor elke techniek de testcases voor dit voorbeeld.
+     </h1>
+    </td>
+  </tr>
+</table>
 
-<h1>
-  <br />Fijn dat je mijn site hebt gevonden!
-  <br /> Tenminste... als je meer wilt weten over testen, dan zit je hier goed.
-  <br />
-  <br />Om te demonstreren hoe verschillende testontwerptechnieken kunnen worden toegepast op dezelfde functionaliteit, gebruiken we diverse voorbeelden en maken we voor elke techniek de testcases voor dit voorbeeld.
- </h1>
-
-
-<h1><br />Rollercoaster Rush</h1>
+<h3><br />Rollercoaster Rush</h3>
+<p>De voorbeeldcase gaat over een ritje in de achtbaan.</p>
+<p>Testbasis: Pseudocode en Flowchart</p>
 <a href="rollercoaster.html"
-<td><img src="images\rollercoaster.png" width="250" height="156" style="border:0;" alt="Rollercoaster"></td>
+<td><img class="code-img-left circular" src="images\rollercoaster.png" width="250" height="156" style="border:0;" alt="Rollercoaster"></td>
 </a>
 
-<h1><br />Servicebeurt</h1>
+<h3><br />Servicebeurt</h3>
+<p>De voorbeeldcase gaat over het maken van een afspraak bij de garage.</p>
+<p>Testbasis: Pseudocode</p>
 <a href="servicebeurt.html"
-<td><img src="images\dashboardlampjes.jpg" width="250" height="156" style="border:0;" alt="Servicebeurt"></td>
+<td><img class="circular" src="images\dashboardlampjes.jpg" width="250" height="156" style="border:0;" alt="Servicebeurt"></td>
 </a>
 
   </body>
