Add contact button and restyle font color

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 <table cellspacing="20">
   <tr>
     <td><img src="images\moeilijk.png" alt="Alle dingen zijn moeilijk"></td>
-    <td><h1>
+    <td><p>
       <br />Fijn dat je mijn site hebt gevonden!
       <br /> Tenminste... als je meer wilt weten over testen, dan zit je hier goed.
       <br />
       <br />Om te demonstreren hoe verschillende testontwerptechnieken kunnen worden toegepast op dezelfde functionaliteit, gebruiken we diverse voorbeelden en maken we voor elke techniek de testcases voor dit voorbeeld.
-     </h1>
+    </p>
     </td>
   </tr>
 </table>
@@ -80,6 +80,16 @@
 <a href="servicebeurt.html"
 <td><img class="circular" src="images\dashboardlampjes.jpg" width="250" height="156" style="border:0;" alt="Servicebeurt"></td>
 </a>
+
+<br><br><hr>
+
+<div style="text-align: center;">
+  <h2>Contact</h2>
+  <p class=contact-message>Als je een probleem hebt waarmee je aan de slag wilt en je denkt mijn hulp ergens bij nodig te hebben of gewoon zin hebt om 'hallo' te zeggen, neem dan gerust contact op.</p>
+  <a class="btn" href="mailto:rob.flier@rftc.nl">CONTACT ME</a>
+</div>
+</div>
+
 
   </body>
 </html>
