--- a/rollercoaster.html
+++ b/rollercoaster.html
@@ -50,20 +50,20 @@
     </div>
   </nav>
 
-  <h1>Om te demonstreren hoe verschillende testontwerptechnieken kunnen worden toegepast op dezelfde functionaliteit, gebruiken we één voorbeeld en maken we voor elke techniek de testcases voor dit voorbeeld.</h1>
+  <p>Om te demonstreren hoe verschillende testontwerptechnieken kunnen worden toegepast op dezelfde functionaliteit, gebruiken we één voorbeeld en maken we voor elke techniek de testcases voor dit voorbeeld.</p>
   <br />
 
-  <h1>De voorbeeldcase gaat over een ritje in de achtbaan. <br /> Om met een groep mensen mee te mogen, zijn er een paar regels waaraan de groep moet voldoen:<br />
+  <p>De voorbeeldcase gaat over een ritje in de achtbaan. <br /> Om met een groep mensen mee te mogen, zijn er een paar regels waaraan de groep moet voldoen:<br />
     <br /><i>Iedereen in de groep moet minimaal 120 cm lang zijn en het totale gewicht van de mensen in de groep moet minimaal 100 kg en niet meer dan 300 kg zijn.</i>
-  </h1>
+  </p>
   <br />
 
-  <h1>De flowchart voor dit voorbeeld wordt getoond in onderstaande figuur:</h1><br />
+  <p>De flowchart voor dit voorbeeld wordt getoond in onderstaande figuur:</p><br />
 
   <table cellspacing="20">
     <tr>
       <td><img src="images\flowchart.png" width="400" height="480" alt="Alle dingen zijn moeilijk"></td>
-      <td><h1>
+      <td><p>
         <br />Opdracht:
         <br />1. Gebruik zonodig alle vier testontwerptechnieken (volgorde mag je zelf bepalen):
         <ul>  o ProcesCyclus Test<br>
@@ -75,7 +75,7 @@
         <br />
         2. Specificeer testgevallen per testontwerptechniek<br><br>
         3. Klaar? Klik <a href="executeRollercoaster.html">hier</a> om je testgevallen uit te voeren.
-       </h1>
+      </p>
       </td>
 
     </tr>
