--- a/executeServicebeurt.html
+++ b/executeServicebeurt.html
@@ -62,35 +62,39 @@
   </script>
 </head>
 <body>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">I Test My Case/Servicebeurt/execute</a>
+    <a class="navbar-brand" href="#">I Test My Case</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
+  
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="index.html#">Home</a>
-          <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="rollercoaster.html">Rollercoaster</a>
+            <a class="nav-link" href="mailto:rob.flier@rftc.nl">Contact</a>
         </li>
+        <!-- <li class="nav-item">
+            <a class="nav-link" href="xxxxxxx.html">Link 3</a>
+        </li> -->
+  
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
+            Opdrachten
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="rollercoaster.html">Rollercoaster</a>
+            <a class="dropdown-item" href="servicebeurt.html">Servicebeurt</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
+        </li> -->
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -98,11 +102,12 @@
       </form>
     </div>
   </nav>
+
   <h1>Om te demonstreren hoe verschillende testontwerptechnieken kunnen worden toegepast op dezelfde functionaliteit, gebruiken we één voorbeeld en maken we voor elke techniek de testcases voor dit voorbeeld.</h1>
   <br />
   <p id="message">Vul hieronder de juiste gegevens in!</p>
   <!-- Invullen kilometerstand -->
-  <p>Kilometerstand</p><input type="text" class=textInput data-testid="kilometerstand" name="tekst" id=kilometerstand value="30000"><br /><br />
+  <h3>Kilometerstand</h3><input type="text" class=textInput data-testid="kilometerstand" name="tekst" id=kilometerstand value="30000">Km<br /><br />
   <!-- Onderstaande is een alternatief voor invullen kilometerstand -->
   <!-- <div class="dropdown">
     <button class="dropbtn">Kilometerstand</button>
