--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 
 <h3><br />Rollercoaster Rush</h3>
 <p>De voorbeeldcase gaat over een ritje in de achtbaan.</p>
-<p>Testbasis: Pseudocode en Flowchart</p>
+<p>Testbasis: <strong>Pseudocode en Flowchart</strong></p>
 <a href="rollercoaster.html"
 <td><img class="code-img-left circular" src="images\rollercoaster.png" width="250" height="156" style="border:0;" alt="Rollercoaster"></td>
 </a>
 
 <h3><br />Servicebeurt</h3>
 <p>De voorbeeldcase gaat over het maken van een afspraak bij de garage.</p>
-<p>Testbasis: Pseudocode</p>
+<p>Testbasis: <strong>Pseudocode</strong></p>
 <a href="servicebeurt.html"
 <td><img class="circular" src="images\dashboardlampjes.jpg" width="250" height="156" style="border:0;" alt="Servicebeurt"></td>
 </a>
@@ -88,7 +88,9 @@
 
 <div style="text-align: center;">
   <h2>Contact</h2>
-  <p class=contact-message>Als je een probleem hebt waarmee je aan de slag wilt en je denkt mijn hulp ergens bij nodig te hebben of gewoon zin hebt om 'hallo' te zeggen, neem dan gerust contact op.</p>
+  <img class=images src="images\RobFlier.png" alt="Rob Flier">
+  <p class=contact-message>Als je een probleem hebt waarmee je aan de slag wilt en je denkt mijn hulp ergens bij nodig te hebben of gewoon zin hebt om <em>'hallo'</em> te zeggen, neem dan gerust contact op.</p>
+ <p>Rob Flier</p>
   <a class="btn" href="mailto:rob.flier@rftc.nl">CONTACT ME</a>
 </div>
 </div>
