Working on a new ParaBank webpage

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="rollercoaster.html">Rollercoaster</a>
               <a class="dropdown-item" href="servicebeurt.html">Servicebeurt</a>
+              <a class="dropdown-item" href="parabank.html">ParaBank</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
@@ -55,7 +56,6 @@
         </form>
       </div>
     </nav>
-       
 
 <table cellspacing="20">
   <tr>
@@ -64,33 +64,46 @@
       <br />Fijn dat je mijn site hebt gevonden!
       <br /> Tenminste... als je meer wilt weten over testen, dan zit je hier goed.
       <br />
-      <br />Om te demonstreren hoe verschillende testontwerptechnieken kunnen worden toegepast op dezelfde functionaliteit, gebruiken we diverse voorbeelden en maken we voor elke techniek de testcases voor dit voorbeeld.
+      <br />Om te demonstreren hoe verschillende testontwerptechnieken en tools kunnen worden toegepast op dezelfde functionaliteit, gebruiken we diverse voorbeelden en maken we voor elke techniek de testcases voor dit voorbeeld.
     </p>
     </td>
   </tr>
 </table>
 
-<h3><br />Rollercoaster Rush</h3>
-<p>De voorbeeldcase gaat over een ritje in de achtbaan.</p>
-<p>Testbasis: <strong>Pseudocode en Flowchart</strong></p>
+<div class="rollercoaster">
+  <h3><br />Rollercoaster Rush</h3>
+  <p>De voorbeeldcase gaat over een ritje in de achtbaan.</p>
+  <p>Testbasis: <strong>Pseudocode</strong> en <strong>Flowchart</strong></p>
 <a href="rollercoaster.html"
-<td><img class="code-img-left circular" src="images\rollercoaster.png" width="250" height="156" style="border:0;" alt="Rollercoaster"></td>
+<td></td><img class="img-rollercoaster circular" src="images\rollercoaster.png" width="250" height="156" style="border:0;" alt="Rollercoaster"></td>
 </a>
+</div>
 
+<div class="servicebeurt">
 <h3><br />Servicebeurt</h3>
 <p>De voorbeeldcase gaat over het maken van een afspraak bij de garage.</p>
 <p>Testbasis: <strong>Pseudocode</strong></p>
 <a href="servicebeurt.html"
-<td><img class="circular" src="images\dashboardlampjes.jpg" width="250" height="156" style="border:0;" alt="Servicebeurt"></td>
+<td><img class="img-servicebeurt circular" src="images\dashboardlampjes.jpg" width="250" height="156" style="border:0;" alt="Servicebeurt"></td>
 </a>
+</div>
 
-<br><br><hr>
+<div class="parabank">
+<h3><br />ParaBank</h3>
+<p>De voorbeeldcase gaat over het doen van bankzaken.</p>
+<p>Tooling: <strong>Robot Framework</strong> en <strong>Cypress</strong></p>
+<a href="parabank.html"
+<td><img class="img-parabank" src="images\parabank.png" width="250" height="356" style="border:0;" alt="ParaBank"></td>
+</a>
+</div>
 
-<div style="text-align: center;">
+<br><br><hr class="horizontal">
+
+<div class="contact" style="text-align: center;">
   <h2>Contact</h2>
   <img class=images src="images\RobFlier.png" alt="Rob Flier">
   <p class=contact-message>Als je een probleem hebt waarmee je aan de slag wilt en je denkt mijn hulp ergens bij nodig te hebben of gewoon zin hebt om <em>'hallo'</em> te zeggen, neem dan gerust contact op.</p>
- <p>Rob Flier</p>
+ <a href="http://www.rftc.nl/">Rob Flier</a><br><br>
   <a class="btn" href="mailto:rob.flier@rftc.nl">CONTACT ME</a>
 </div>
 </div>
