--- a/rollercoaster.html
+++ b/rollercoaster.html
@@ -37,6 +37,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="servicebeurt.html">Servicebeurt</a>
+            <a class="dropdown-item" href="parabank.html">ParaBank</a>
           </div>
         </li>
       </ul>
