--- a/executeServicebeurt.html
+++ b/executeServicebeurt.html
@@ -64,7 +64,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">I Test My Case</a>
+    <a class="navbar-brand" href="#">I Test My Case/Servicebeurt/execute</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -88,6 +88,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="rollercoaster.html">Rollercoaster</a>
             <a class="dropdown-item" href="servicebeurt.html">Servicebeurt</a>
+            <a class="dropdown-item" href="parabank.html">ParaBank</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
