--- a/parabank.html
+++ b/parabank.html
@@ -10,52 +10,27 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-  <title>Rollercoaster Rush</title>
+  <title>Servicebeurt</title>
   <link rel="stylesheet" href="css/styles.css">
-
-  <script>
-    function myFunction() {
-      if (document.querySelector("#length").value < 120) {
-        document.querySelector("#length").style.color = "red";
-        document.getElementById("message").style.color = "red";
-        document.getElementById("message").innerHTML = "Voer opnieuw de lengte van de kleinste persoon in!";
-      } else {
-        document.querySelector("#length").style.color = "green";
-        if (document.querySelector("#weight").value < 100 || document.querySelector("#weight").value > 300) {
-          document.querySelector("#weight").style.color = "red";
-          document.getElementById("message").style.color = "red";
-          document.getElementById("message").innerHTML = "Voer opnieuw het groepsgewicht in!";
-        } else {
-          document.getElementById("message").style.color = "green";
-          document.querySelector("#length").style.color = "green";
-          document.querySelector("#weight").style.color = "green";
-          document.getElementById("message").innerHTML = "Jullie mogen mee met de rit van jullie leven!";
-        }
-      }
-    }
-  </script>
 
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">I Test My Case/Rollercoaster/execute</a>
+    <a class="navbar-brand" href="#">I Test My Case/ParaBank</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="index.html#">Home</a>
+          <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="mailto:rob.flier@rftc.nl">Contact</a>
-        </li>
-        <!-- <li class="nav-item">
-            <a class="nav-link" href="xxxxxxx.html">Link 3</a>
-        </li> -->
-  
+          <a class="nav-link" href="mailto:rob.flier@rftc.nl">Contact</a>
+      </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Opdrachten
@@ -63,14 +38,8 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="rollercoaster.html">Rollercoaster</a>
             <a class="dropdown-item" href="servicebeurt.html">Servicebeurt</a>
-            <a class="dropdown-item" href="parabank.html">ParaBank</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li> -->
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -79,37 +48,34 @@
     </div>
   </nav>
 
-  <h1>Om te demonstreren hoe verschillende testontwerptechnieken kunnen worden toegepast op dezelfde functionaliteit, gebruiken we één voorbeeld en maken we voor elke techniek de testcases voor dit voorbeeld.</h1>
+  <br>
+  <p>Om te demonstreren hoe verschillende tools kunnen worden toegepast op dezelfde functionaliteit, gebruiken we één voorbeeld en maken we voor elke tool de testcases voor dit voorbeeld.</p>
   <br />
 
-  <h1>De voorbeeldcase gaat over een ritje in de achtbaan. <br /> Om met een groep mensen mee te mogen, zijn er een paar regels waaraan de groep moet voldoen:<br />
-    <br /><i>Iedereen in de groep moet minimaal 120 cm lang zijn en het totale gewicht van de mensen in de groep moet minimaal 100 kg en niet meer dan 300 kg zijn.</i>
-  </h1>
-  <br />
+  <!-- <td><img src="images\xxxxxxxx.png" width="60" height="40" style="border:0;" alt=""></td> -->
 
-  <p id="message"></p>
+  <h1><br />Opdracht:</h1>
 
-  <input type="text" class=textInput data-testid="length" name="tekst" id=length value="">
-  <input type="text" class=textInput data-testid="weight" name="tekst" id=weight value="">
-  <button type="submit" class=btn-primary data-testid="check-button" name="" value="Controleer" onclick="myFunction()">Controleer</button>
-  <a href='rollercoaster.html'>
-        <button type="submit" class=btn-primary data-testid="check-button" name="" value="Terug" >Terug naar opdracht</button>
-    </a>
-  <br />
+  <p>
+    Aan jullie de opdracht om ..... met gebruikmaking van ....., dus met ..... als dekkingsvorm.
+<br /><br />
+Als het testontwerp af is mogen jullie m.b.v Robot Framework en/of Cypress de testscripts maken.
+<br>
+Zien jullie verschillen in beide tools?
 
+<br><br>    Klaar? Klik <a href="https://parabank.parasoft.com/parabank/index.htm">hier</a> om je testgevallen uit te voeren.
+  </p>
 
   <!-- Optional JavaScript; choose one of the two! -->
-
   <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
   <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     -->
-  <script src="index.js" charset="utf-8"></script>
+  <!-- <script src="index.js" charset="utf-8"></script> -->
 </body>
 
 </html>
