--- a/servicebeurt.html
+++ b/servicebeurt.html
@@ -34,6 +34,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="rollercoaster.html">Rollercoaster</a>
+            <a class="dropdown-item" href="parabank.html">ParaBank</a>
           </div>
         </li>
       </ul>
