Keep ParaBank inactive

--- a/executeServicebeurt.html
+++ b/executeServicebeurt.html
@@ -188,7 +188,7 @@
   <br />
   <button type="submit" class=btn-primary data-testid="check-button" name="" value="Controleer" onclick="myFunction()">Controleer</button>
   <a href='servicebeurt.html'>
-    <button type="submit" class=btn-primary data-testid="check-button" name="" value="Terug">Terug naar opdracht</button>
+    <button type="submit" class=btn-primary data-testid="go-back" name="" value="Terug">Terug naar opdracht</button>
   </a>
   <br />
   <!-- Optional JavaScript; choose one of the two! -->
