--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <h3><br />ParaBank</h3>
 <p>De voorbeeldcase gaat over het doen van bankzaken.</p>
 <p>Tooling: <strong>Robot Framework</strong> en <strong>Cypress</strong></p>
-<a href="parabank.html"
+<a href="#"
 <td><img class="img-parabank" src="images\parabank.png" width="250" height="356" style="border:0;" alt="ParaBank"></td>
 </a>
 </div>
