--- a/executeRollercoaster.html
+++ b/executeRollercoaster.html
@@ -93,7 +93,7 @@
   <input type="text" class=textInput data-testid="weight" name="tekst" id=weight value="">
   <button type="submit" class=btn-primary data-testid="check-button" name="" value="Controleer" onclick="myFunction()">Controleer</button>
   <a href='rollercoaster.html'>
-        <button type="submit" class=btn-primary data-testid="check-button" name="" value="Terug" >Terug naar opdracht</button>
+        <button type="submit" class=btn-primary data-testid="go-back" name="" value="Terug" >Terug naar opdracht</button>
     </a>
   <br />
 
@@ -109,7 +109,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     -->
-  <script src="index.js" charset="utf-8"></script>
+  <!-- <script src="index.js" charset="utf-8"></script> -->
 </body>
 
 </html>
