Changed input type from text to number

--- a/executeRollercoaster.html
+++ b/executeRollercoaster.html
@@ -87,10 +87,10 @@
   </h1>
   <br />
 
-  <p id="message"></p>
+  <p id="message">Vul hieronder de juiste gegevens in!</p>
 
-  <input type="text" class=textInput data-testid="length" name="tekst" id=length value="">
-  <input type="text" class=textInput data-testid="weight" name="tekst" id=weight value="">
+  <input type="number" class=textInput data-testid="length" name="tekst" id=length value="">
+  <input type="number" class=textInput data-testid="weight" name="tekst" id=weight value="">
   <button type="submit" class=btn-primary data-testid="check-button" name="" value="Controleer" onclick="myFunction()">Controleer</button>
   <a href='rollercoaster.html'>
         <button type="submit" class=btn-primary data-testid="go-back" name="" value="Terug" >Terug naar opdracht</button>
