--- a/executeServicebeurt.html
+++ b/executeServicebeurt.html
@@ -108,7 +108,7 @@
   <br />
   <p id="message">Vul hieronder de juiste gegevens in!</p>
   <!-- Invullen kilometerstand -->
-  <h3>Kilometerstand</h3><input type="text" class=textInput data-testid="kilometerstand" name="tekst" id=kilometerstand value="30000">Km<br /><br />
+  <h3>Kilometerstand</h3><input type="number" class=textInput data-testid="kilometerstand" name="tekst" id=kilometerstand value="30000">Km<br /><br />
   <!-- Onderstaande is een alternatief voor invullen kilometerstand -->
   <!-- <div class="dropdown">
     <button class="dropbtn">Kilometerstand</button>
