Put " around the id's

--- a/executeServicebeurt.html
+++ b/executeServicebeurt.html
@@ -156,27 +156,27 @@
     <br />
     <h3>Banden versleten of lek?</h3>
     <label class="checkbox-container">Bandenspanning sensor OK
-      <input type="checkbox" id=sensor checked="checked">
+      <input type="checkbox" id="sensor" name="sensor" checked="checked">
       <span class="checkbox-checkmark"></span>
     </label>
     <label class="checkbox-container">Links voor
-      <input type="checkbox" id=links-voor>
+      <input type="checkbox" id="links-voor">
       <span class="checkbox-checkmark"></span>
     </label>
     <label class="checkbox-container">Rechts voor
-      <input type="checkbox" id=rechts-voor>
+      <input type="checkbox" id="rechts-voor">
       <span class="checkbox-checkmark"></span>
     </label>
     <label class="checkbox-container">Links achter
-      <input type="checkbox" id=links-achter>
+      <input type="checkbox" id="links-achter">
       <span class="checkbox-checkmark"></span>
     </label>
     <label class="checkbox-container">Rechts achter
-      <input type="checkbox" id=rechts-achter>
+      <input type="checkbox" id="rechts-achter">
       <span class="checkbox-checkmark"></span>
     </label>
     <label class="checkbox-container">Reserve wiel
-      <input type="checkbox" id=reserve-wiel>
+      <input type="checkbox" id="reserve-wiel">
       <span class="checkbox-checkmark"></span>
     </label>
   </div>
@@ -185,19 +185,19 @@
     <br />
     <h3>Verlichting in orde?</h3>
     <label class="checkbox-container">Contact ingeschakeld?
-      <input type="checkbox" id=contact checked="checked">
+      <input type="checkbox" id="contact" checked="checked">
       <span class="checkbox-checkmark"></span>
     </label>
     <label class="checkbox-container">Lichtschakelaar aan?
-      <input type="checkbox" id=schakelaar checked="checked">
+      <input type="checkbox" id="schakelaar" checked="checked">
       <span class="checkbox-checkmark"></span>
     </label>
     <label class="checkbox-container">Rechterkoplamp stuk?
-      <input type="checkbox" id=koplamp-rechts>
+      <input type="checkbox" id="koplamp-rechts">
       <span class="checkbox-checkmark"></span>
     </label>
     <label class="checkbox-container">Linkerkoplamp stuk?
-      <input type="checkbox" id=koplamp-links>
+      <input type="checkbox" id="koplamp-links">
       <span class="checkbox-checkmark"></span>
     </label>
   </div>
