--- a/executeServicebeurt.html
+++ b/executeServicebeurt.html
@@ -33,25 +33,28 @@
             }
         }
         // Banden versleten of lek? Ga naar Profile Tyrecenter
-        if (document.getElementsByTagName("input")[5].checked) {
-          if (document.getElementsByTagName("input")[6].checked ||
+        if (document.getElementsByTagName("input")[10].checked) {
+          if (document.getElementsByTagName("input")[5].checked ||
+            document.getElementsByTagName("input")[6].checked ||
             document.getElementsByTagName("input")[7].checked ||
             document.getElementsByTagName("input")[8].checked ||
-            document.getElementsByTagName("input")[9].checked ||
-            document.getElementsByTagName("input")[10].checked)
+            document.getElementsByTagName("input")[9].checked)
             if (document.getElementById("barst").checked || document.getElementById("sterretje").checked) {
               if (document.getElementsByTagName("input")[11].checked && document.getElementsByTagName("input")[12].checked) {
-          if (document.getElementsByTagName("input")[13].checked ||
-            document.getElementsByTagName("input")[14].checked) {
-              document.getElementById("message").innerHTML = "De afspraak wordt ingepland inclusief een afspraak bij Carglass, ACtronics en Profile Tyrecenter.";
+                 if (document.getElementsByTagName("input")[13].checked ||
+                     document.getElementsByTagName("input")[14].checked) {
+                    document.getElementById("message").innerHTML = "De afspraak wordt ingepland inclusief een afspraak bij Carglass, ACtronics en Profile Tyrecenter.";
             } else {
               document.getElementById("message").innerHTML = "De afspraak wordt ingepland inclusief een afspraak bij Carglass en Profile Tyrecenter.";
               }
            }
            } else {
+            if (document.getElementsByTagName("input")[11].unchecked || document.getElementsByTagName("input")[12].unchecked) {
+            document.getElementById("message").innerHTML = "De afspraak wordt ingepland inclusief een afspraak bij Carglass en Profile Tyrecenter.";
+           }
              if (document.getElementsByTagName("input")[13].checked ||
-            document.getElementsByTagName("input")[14].checked) {
-              document.getElementById("message").innerHTML = "De afspraak wordt ingepland inclusief een afspraak bij ACtronics en Profile Tyrecenter.";  
+                 document.getElementsByTagName("input")[14].checked) {
+                    document.getElementById("message").innerHTML = "De afspraak wordt ingepland inclusief een afspraak bij ACtronics en Profile Tyrecenter.";  
             } else {document.getElementById("message").innerHTML = "De afspraak wordt ingepland inclusief een afspraak bij Profile Tyrecenter.";
           }
             } 
@@ -134,88 +137,47 @@
       <a class="item" href="#">90000</a>
       <a class="item" href="#">120000</a>
     </div>
+
   </div> -->
   <!-- Voorruit schade ??? -->
   <div class="radio-content" id="voorruit">
     <h3>Voorruit beschadigd?</h3>
-    <label class="radio-container">nee
-      <input type="radio" name="voorruit" checked>
-      <span class="radio-checkmark"></span>
-    </label>
-    <label class="radio-container">Sterretje
-      <input type="radio" id="sterretje" name="voorruit">
-      <span class="radio-checkmark"></span>
-    </label>
-    <label class="radio-container">Barst
-      <input type="radio" id="barst" name="voorruit">
-      <span class="radio-checkmark"></span>
-    </label>
+      <input type="radio" name="voorruit" value="onbeschadigd" checked> Onbeschadigd<br>
+      <input type="radio" id="sterretje" name="voorruit" value="sterretje" > Sterretje<br>
+      <input type="radio" id="barst" name="voorruit" value="barst" > Barst<br>
   </div>
-  <!-- Versleten of lekke banden ??? -->
+
   <div>
+    <!-- Versleten of lekke banden ??? -->
     <br />
     <h3>Banden versleten of lek?</h3>
-    <label class="checkbox-container">Bandenspanning sensor OK
-      <input type="checkbox" id="sensor" name="sensor" checked="checked">
-      <span class="checkbox-checkmark"></span>
-    </label>
-    <label class="checkbox-container">Links voor
-      <input type="checkbox" id="links-voor">
-      <span class="checkbox-checkmark"></span>
-    </label>
-    <label class="checkbox-container">Rechts voor
-      <input type="checkbox" id="rechts-voor">
-      <span class="checkbox-checkmark"></span>
-    </label>
-    <label class="checkbox-container">Links achter
-      <input type="checkbox" id="links-achter">
-      <span class="checkbox-checkmark"></span>
-    </label>
-    <label class="checkbox-container">Rechts achter
-      <input type="checkbox" id="rechts-achter">
-      <span class="checkbox-checkmark"></span>
-    </label>
-    <label class="checkbox-container">Reserve wiel
-      <input type="checkbox" id="reserve-wiel">
-      <span class="checkbox-checkmark"></span>
-    </label>
+      <input type="checkbox" id="links-voor" name="links-voor" value="links-voor"> Links voor<br>
+      <input type="checkbox" id="rechts-voor" name="rechts-voor" value="rechts-voor"> Rechts voor<br>
+      <input type="checkbox" id="links-achter" name="links-achter" value="links-achter"> Links achter<br>
+      <input type="checkbox" id="rechts-achter" name="rechts-achter" value="rechts-achter"> Rechts achter<br>
+      <input type="checkbox" id="reserve-wiel" name="reserve-wiel" value="reserve-wiel"> Reserve wiel<br>
+      <input type="checkbox" id="sensor" name="sensor" value="sensor" checked="checked"> Bandenspanning sensor OK<br>
   </div>
-  <!-- Licht -->
+  
   <div>
+    <!-- Verlichting -->
     <br />
     <h3>Verlichting in orde?</h3>
-    <label class="checkbox-container">Contact ingeschakeld?
-      <input type="checkbox" id="contact" checked="checked">
-      <span class="checkbox-checkmark"></span>
-    </label>
-    <label class="checkbox-container">Lichtschakelaar aan?
-      <input type="checkbox" id="schakelaar" checked="checked">
-      <span class="checkbox-checkmark"></span>
-    </label>
-    <label class="checkbox-container">Rechterkoplamp stuk?
-      <input type="checkbox" id="koplamp-rechts">
-      <span class="checkbox-checkmark"></span>
-    </label>
-    <label class="checkbox-container">Linkerkoplamp stuk?
-      <input type="checkbox" id="koplamp-links">
-      <span class="checkbox-checkmark"></span>
-    </label>
+      <input type="checkbox" id="schakelaar" checked="checked"> Lichtschakelaar aan?<br>
+      <input type="checkbox" id="contact" checked="checked"> Contact ingeschakeld?<br>
+      <input type="checkbox" id="koplamp-links"> Linkerkoplamp stuk?<br>
+      <input type="checkbox" id="koplamp-rechts"> Rechterkoplamp stuk?<br>
   </div>
   <br />
-  <button type="submit" class=btn-primary data-testid="check-button" name="" value="Controleer" onclick="myFunction()">Controleer</button>
+  <!-- Verzend je keuze -->
+  <button type="submit" class=btn-primary data-testid="check-button" id="check-button" name="check-button" value="Controleer" onclick="myFunction()">Maak afspraak</button>
   <a href='servicebeurt.html'>
+  <!-- Terug naar opdracht -->
     <button type="submit" class=btn-primary data-testid="go-back" name="" value="Terug">Terug naar opdracht</button>
   </a>
   <br />
-  <!-- Optional JavaScript; choose one of the two! -->
-  <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    -->
   <!-- <script src="index.js" charset="utf-8"></script> -->
 </body>
 </html>
