Id toegevoegd aan voorruit

--- a/executeServicebeurt.html
+++ b/executeServicebeurt.html
@@ -147,7 +147,7 @@
   <!-- Voorruit schade ??? -->
   <div class="radio-content" id="voorruit">
     <h3>Voorruit beschadigd?</h3>
-      <input type="radio" name="voorruit" value="onbeschadigd" checked> Onbeschadigd<br>
+      <input type="radio" id="onbeschadigd" name="voorruit" value="onbeschadigd" checked> Onbeschadigd<br>
       <input type="radio" id="sterretje" name="voorruit" value="sterretje" > Sterretje<br>
       <input type="radio" id="barst" name="voorruit" value="barst" > Barst<br>
   </div>
