--- a/executeServicebeurt.html
+++ b/executeServicebeurt.html
@@ -42,12 +42,8 @@
             if (document.getElementById("barst").checked || document.getElementById("sterretje").checked) {
               if (document.getElementsByTagName("input")[11].checked && document.getElementsByTagName("input")[12].checked) {
                  if (document.getElementsByTagName("input")[13].checked ||
-<<<<<<< HEAD
-                     document.getElementsByTagName("input")[14].checked) {
-=======
      
                  document.getElementsByTagName("input")[14].checked) {
->>>>>>> 00a2632d3f97512e60ce74b99db82af3003eae53
                     document.getElementById("message").innerHTML = "De afspraak wordt ingepland inclusief een afspraak bij Carglass, ACtronics en Profile Tyrecenter.";
             } else {
               document.getElementById("message").innerHTML = "De afspraak wordt ingepland inclusief een afspraak bij Carglass en Profile Tyrecenter.";
@@ -147,7 +143,7 @@
   <!-- Voorruit schade ??? -->
   <div class="radio-content" id="voorruit">
     <h3>Voorruit beschadigd?</h3>
-      <input type="radio" id="onbeschadigd" name="voorruit" value="onbeschadigd" checked> Onbeschadigd<br>
+      <input type="radio" id="voorruit" name="voorruit" value="onbeschadigd" checked> Onbeschadigd<br>
       <input type="radio" id="sterretje" name="voorruit" value="sterretje" > Sterretje<br>
       <input type="radio" id="barst" name="voorruit" value="barst" > Barst<br>
   </div>
