--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Links
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="https://www.tmap.net/">TMap.net</a>
+              <a class="dropdown-item" href="https://kentcdodds.com/">Kent C. Dodds</a>
+              <a class="dropdown-item" href="https://www.guru99.com/">Guru99</a>
+              <a class="dropdown-item" href="https://testautomationu.applitools.com">Test Automation University</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="http://www.rftc.nl/">Rob Flier Training & Consultancy</a>
+            </div>
+          </li>
+
           <!-- <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li> -->
@@ -64,6 +79,7 @@
       <br />Fijn dat je mijn site hebt gevonden!
       <br /> Tenminste... als je meer wilt weten over testen, dan zit je hier goed.
       <br />
+      <br />Veel testactiviteiten kunnen geautomatiseerd worden. Testen en Test Automatisering zijn dus niet meer los van elkaar te zien.
       <br />Om te demonstreren hoe verschillende testontwerptechnieken en tools kunnen worden toegepast op dezelfde functionaliteit, gebruiken we diverse voorbeelden en maken we voor elke techniek de testcases voor dit voorbeeld.
     </p>
     </td>
@@ -71,7 +87,7 @@
 </table>
 
 <div class="rollercoaster">
-  <h3><br />Rollercoaster Rush</h3>
+  <h3><br />Voorbeeld 1 - Rollercoaster Rush</h3>
   <p>De voorbeeldcase gaat over een ritje in de achtbaan.</p>
   <p>Testbasis: <strong>Pseudocode</strong> en <strong>Flowchart</strong></p>
 <a href="rollercoaster.html"
@@ -80,7 +96,7 @@
 </div>
 
 <div class="servicebeurt">
-<h3><br />Servicebeurt</h3>
+<h3><br />Voorbeeld 2 - Servicebeurt</h3>
 <p>De voorbeeldcase gaat over het maken van een afspraak bij de garage.</p>
 <p>Testbasis: <strong>Pseudocode</strong></p>
 <a href="servicebeurt.html"
@@ -89,7 +105,7 @@
 </div>
 
 <div class="parabank">
-<h3><br />ParaBank</h3>
+<h3><br />Voorbeeld 3 - ParaBank</h3>
 <p>De voorbeeldcase gaat over het doen van bankzaken.</p>
 <p>Tooling: <strong>Robot Framework</strong> en <strong>Cypress</strong></p>
 <a href="#"
