Pur a break in a textline

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <div class="servicebeurt">
 <h3><br />Voorbeeld 2 - Servicebeurt</h3>
-<p>De voorbeeldcase gaat over het maken van een afspraak bij de garage.</p>
+<p>De voorbeeldcase gaat over het maken van een afspraak<br> bij de garage.</p>
 <p>Testbasis: <strong>Pseudocode</strong></p>
 <a href="servicebeurt.html"
 <td><img class="img-servicebeurt circular" src="images\dashboardlampjes.jpg" width="250" height="156" style="border:0;" alt="Servicebeurt"></td>
