activated parabank site

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <h3><br />Voorbeeld 3 - ParaBank</h3>
 <p>De voorbeeldcase gaat over het doen van bankzaken.</p>
 <p>Tooling: <strong>Robot Framework</strong> en <strong>Cypress</strong></p>
-<a href="#"
+<a href="https://parabank.parasoft.com/parabank/index.htm"
 <td><img class="img-parabank" src="images\parabank.png" width="250" height="356" style="border:0;" alt="ParaBank"></td>
 </a>
 </div>
