Added images to the web pages

--- a/executeServicebeurt.html
+++ b/executeServicebeurt.html
@@ -132,14 +132,16 @@
   <!-- Onderstaande is een alternatief voor invullen kilometerstand -->
   <!-- <div class="dropdown">
     <button class="dropbtn">Kilometerstand</button>
-    <div class="dropdown-content" id="kmStand">
-      <a class="item" href="#">30000</a>
-      <a class="item" href="#">60000</a>
-      <a class="item" href="#">90000</a>
-      <a class="item" href="#">120000</a>
+    <div class="dropdown-content">
+      <a data-testid="kilometerstand" href="#">30000</a> 
+      <a data-testid="kilometerstand" href="#">60000</a>
+      <a data-testid="kilometerstand" href="#">90000</a>
+      <a data-testid="kilometerstand" href="#">120000</a>
+    <br><br>
     </div>
-
   </div> -->
+
+  </div>
   <!-- Voorruit schade ??? -->
   <div class="radio-content" id="voorruit">
     <h3>Voorruit beschadigd?</h3>
