--- a/servicebeurt.html
+++ b/servicebeurt.html
@@ -51,7 +51,7 @@
   <p>Door de lease maatschappij zijn de volgende afspraken met de bestuurder gemaakt:</p>
 
   <td><img src="images\pseudocode.png" width="600" height="400" style="border:0;" alt="Pseudocode servicebeurt"></td>
-
+  <td><img class="img-garage circular" src="images\onderhoudsbeurt.jpg" width="550" height="380" style="border:0;" alt="Garage"></td>
   <h1><br />Opdracht:</h1>
 
   <p>
