SQA Mate tool toegevoegd

--- a/servicebeurt.html
+++ b/servicebeurt.html
@@ -108,10 +108,10 @@
     Aan jullie de opdracht om een testgraaf te maken met gebruikmaking van de Elementaire Vergelijkingen Test  techniek (EVT), dus met Modified Condition Decision Coverage (MCDC) als dekkingsvorm.
 <br /><br />
 Als de testgraaf af is mogen jullie m.b.v de testontwerptechniek Data Combinatie Test, dus Equivalentie klassen evt. gecombineerd met Grenswaarden analyse en pairwise testing het testontwerp maken.
-
+Gebruik hier voor de tool <a href="https://sqamate.com/tools/pairwise">SQA Mate</a>.<br><br>
 Zien jullie verschillen in beide technieken?
 
-<br><br>    Klaar? Klik <a href="executeServicebeurt.html">hier</a> om je testgevallen uit te voeren.
+    Klaar? Klik <a href="executeServicebeurt.html">hier</a> om je testgevallen uit te voeren.
   </p>
 
   <!-- Optional JavaScript; choose one of the two! -->
